--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Huy Quang",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mssql": "^11.0.1",
     "mysql2": "^3.13.0"
